Removed old Google analytics code and create a partial view for Google analytics.

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -35,8 +35,7 @@
     <script type="text/javascript" src="~/Scripts/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/Content/chosen/chosen.jquery.js"></script>
     <script type="text/javascript" src="~/Content/js/utility.js"></script>
-    @*<asp:ContentPlaceHolder ID="head" runat="server">
-        </asp:ContentPlaceHolder>*@
+    @{ Html.RenderPartial("_GoogleAnalytics"); }
 </head>
 <body>
     <div id="wrap">
