--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -32,8 +32,7 @@
             }
         });//]]>
     </script>
-    @*<asp:ContentPlaceHolder ID="head" runat="server">
-        </asp:ContentPlaceHolder>*@
+    @{ Html.RenderPartial("_GoogleAnalytics"); }
 </head>
 <body class ="form-horizontal">
     <div id="wrap">
