--- a/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/DoctorFeed.cshtml
@@ -117,7 +117,7 @@
 
                         "<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= " + url.toString() + "/answers/" + escape(response[indexcnt].questionid) + "'><img title='Twitter' class='share_icons_width' src='../Content/image/twitter.png' alt='Twitter'></a>" +
                         //"<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= Q. " + escape(response[indexcnt].questiontext) + " \n Ans. " + escape(response[indexcnt].answertext) + " \n " + url.toString() + "/Patients/PatientQuestionDetails/" + escape(response[indexcnt].questionid) + "'><img title='Twitter' class='share_icons_width' src='../Resources/image/twitter.png' alt='Twitter'></a>" +
-                        "<a class='share_link-margin ' target='' href='mailto:?Subject=Mirai Consult has been shared an Answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "' style='margin-right:10px'><img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'></a>";
+                        "<a class='share_link-margin ' target='' href='mailto:?Subject=Mirai Consult has shared an answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "' style='margin-right:10px'><img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'></a>";
 
               
                         if (UserId != response[indexcnt].docid) {
