--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -63,7 +63,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <div class="span8 pull-right btn-padding-left">
-                        <input type="submit" class="btn thanx tab_margin gray-border" value="Submit" onclick="submitAction();">
+                        <input type="submit" class="btn thanx tab_margin gray-border" value="Submit">
                         <input type="reset" class="btn tab_margin cancel gray-border" value="Reset" onclick='resetAction();'>                       
                     </div>
                 </div>
@@ -119,15 +119,13 @@
     $(".input-block-level").keyup(function () {
         //Page_ClientValidate();
     });
-    function submitAction(){
-        if (!Page_ClientValidate()) {
-            _gaq.push(['_trackEvent', 'Downloads', 'PDF', '/salesForms/orderForm1.pdf']);
-            this.disabled = false;
-        } else {
-            this.disabled = true;
+    $(function () {
+        var successMessage = $(".success_message_color.msg_font");
+        if (successMessage.length > 0) {
+            //ga('send', 'event', 'category', 'action');
+            ga('send', 'event', 'Friends', 'Invite Friends');
         }
-    }
-
+    });
     function resetAction() {
         $("span.validation-summary-errors.field-validation-error").html("");
         window.location.href = '/invite-friends';
