--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -56,7 +56,7 @@
                     </div>
                     <div class="row-fluid div-left-padding">
                         <div class="span4 div-left-padding-large">
-                            <button class="btn thanx search_margin" onclick="return  btnSearchDoctor_Click()">Search</button>
+                            <button class="btn thanx search_margin" onclick="return  btnSearchDoctor_Click(true)">Search</button>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                             getLocationsbyCity();
                         }
                         else {
-                            btnSearchDoctor_Click();
+                            btnSearchDoctor_Click(false);
                         }
                         $(".chzn-select").trigger("liszt:updated");
                     },
@@ -121,7 +121,11 @@
                     }
                 });
             });
-            function btnSearchDoctor_Click() {
+            function btnSearchDoctor_Click(ClickEvent) {
+                if (ClickEvent) {
+                    labelOfEvent = $('#locality-select').html() + '/' + $('#city-select').html();
+                    ga(' send', 'event', 'Patient', 'Find Doctor', labelOfEvent);
+                }
                 $('#searchspan').empty();
                 $("#searchResult").empty();
                 var cityid = $('#city-select').val();
@@ -166,7 +170,7 @@
 
                             if (document.getElementById("HiddenUserType").value == "2") {
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
-                                    template = template + "<div class='span3 pull-right'><a onclick='bookaptclicked(\"" + response[indexcnt].userid + "\")' href='" + docconnecturl + response[indexcnt].userid + "&frmaskmirai=1' Class='btn book_appt_button make_appointment_btn btn-margin-bottom' target='_blank' >Book Appointment </a></div>";
+                                    template = template + "<div class='span3 pull-right'><a onclick='bookaptclicked(\"" + response[indexcnt].userid + "\", \"" + response[indexcnt].name + "\")' href='" + docconnecturl + response[indexcnt].userid + "&frmaskmirai=1' Class='btn book_appt_button make_appointment_btn btn-margin-bottom' target='_blank' >Book Appointment </a></div>";
                             }
                             template = template + "</div>";
                             $("#searchResult").append(template);
@@ -213,11 +217,11 @@
                         var Location = document.getElementById("hdnLoactionId").value;
                         if (Location) {
                             $('#locality-select option[value=' + Location + ']').attr("selected", true);
-                            btnSearchDoctor_Click();
+                            btnSearchDoctor_Click(false);
                             document.getElementById("hdnLoactionId").value = null;
                         }
                         else {
-                            btnSearchDoctor_Click();
+                            btnSearchDoctor_Click(false);
                         }
                         $(".chzn-select").trigger("liszt:updated");
                     },
