Fixed Home page:Home page image is not responsive in ipad and tab.

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -2382,6 +2382,7 @@ table.cust-table {
    }
    .image-padding-left{
        margin-top:-2%;
+       padding-right:4%;
    }
    .ask-question-div{
        margin-left: 62%;
