--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="image-padding-left" style="vertical-align:central">
-    <img src="../Content/image/home.png" />
+    <img src="../Content/image/home.png" class="textareadiv-margin" />
     <div class="container">
         <div class="ask-question-div row-fluid hidden-phone">
             <div class="innerdivborders span12">
