committing changes in ga

--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -89,7 +89,7 @@
         $('#liaskdoc').addClass("active");
 
         //ga('send', 'event', 'category', 'action');google analytics code
-        ga('send', 'event', 'Patient', 'Go To Ask Question');
+        //ga('send', 'event', 'Patient', 'Go To Ask Question');
 
         var MaxLength = 200;
         $('#txtAreaQuestion').keypress(function (e) {
@@ -148,7 +148,6 @@
     $("#btnAskMirai").click(function () {
 
         var questionText = document.getElementById('txtAreaQuestion').value.trim();
-        var questionText = document.getElementById('txtAreaQuestion').value;
         if (questionText == null || questionText.trim() == "") {
             document.getElementById('lblValidation').style.display = 'block';
             document.getElementById('lblValidation').innerHTML = "Please Enter Question";
@@ -172,8 +171,8 @@
                         document.getElementById('txtAreaQuestion').style.display = 'none';
                         document.getElementById('searchResultSpan').innerHTML = '';
                         document.getElementById('ansCount').style.display = 'none';
-                        //ga('send', 'event', 'category', 'action');
-                        ga('send', 'event', 'Patient', 'Ask a question');
+                        //ga('send', 'event', 'category', 'action','Label');
+                        ga('send', 'event', 'Patient', 'Ask Question',questionText);
                     }
                 },
                 error: function (data) {
