--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -23,7 +23,6 @@
                         <input type="hidden" id="hdnDocconnecturl" name="hdnDocconnecturl" value="@Model.hdnDocconnecturl" />
                         <input type="hidden" id="FacebookAppKey" name="FacebookAppKey" value="@Model.FacebookAppKey" />
                         <input type="hidden" id="AskmiraiUrl" name="AskmiraiUrl" value="@Model.AskmiraiUrl" />
-
                     </div>
                 </div>
             </div>
@@ -80,7 +79,7 @@
                                 title = response[indexcnt].title;
                             else
                                 title = "";
-                            template = "<div class='span12 custom-yellow-container'><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].questionid + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
+                            template = "<div class='span12 custom-yellow-container'><div class='custom-inner-green-container'><a class='question_text' href='../answers/" + response[indexcnt].questionid + "' onclick=\"ga('send', 'event', 'Patient', 'Review Others Answers','"+ response[indexcnt].questiontext+"');\">" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
                             "<div class='inner-count-likes pull-right' title='Thanked By Patient'> " + thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'>" + endorsecount + " </div></div></div><div class='row-fluid'>" +
                             "<div class='row-fluid custom-occupy'><div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div></div></div><div class='visible-phone feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div><div class='span6  middle-size-padding '><div class='ans_time_detail'>Dr. " + response[indexcnt].answerreplyedby + " </div><div class='title_text'><b>" + title + "</b></div></div>";
                             if (document.getElementById("HiddenUserType").value != "0") {
