--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -30,6 +30,7 @@
                             </div>
                         </div>
                     </div>
+                    <script type="text/javascript"> ga(' send', 'event', 'Patient', 'Create Account', 'Create Patient Account');</script>
                 }
                 else
                 {
@@ -318,9 +319,6 @@
     });
     $(function () {
         $('#dob').datepicker();
-        if ($('#SuccessMessagediv').length > 0) {
-            ga(' send', 'event', 'Patient', 'Create Account', 'Create Patient Account')
-        }
     });
     function getStatebyCountry(countryId) {
         if (countryId.length == 0)
