--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -80,22 +80,33 @@
                               string AskmiraiUrl = "";
                               string FacebookAppKey = "";
                               string userName = "";
+                              string userType = "";
                               if(Session["UserFullName"] != null)
-                                {
-                                    userName = Convert.ToString(Session["UserFullName"]);
-                                }
-
+                              {
+                                  userName = Convert.ToString(Session["UserFullName"]);
+                              }
+                              if (Session["UserType"] != null)
+                              {
+                                  if (Convert.ToString(Session["UserType"]) == "1")
+                                  {
+                                      userType = "Doctor";
+                                  }
+                                  else if (Convert.ToString(Session["UserType"]) == "2")
+                                  {
+                                      userType = "Patient";
+                                  }
+                              }
                                webaddress = Convert.ToString(ConfigurationManager.AppSettings["websiteUrl"]);
                                AskmiraiUrl = Convert.ToString(ConfigurationSettings.AppSettings["askMiraiLink"]);
                                FacebookAppKey = Convert.ToString(ConfigurationSettings.AppSettings["FacebookAppKey"]);
                             }
-                            <a href='#' onclick="shareOnFacebook('MiraiConsult','Healthcare now more accessible and convenient at Mirai Consult&#8482;','0','@(AskmiraiUrl)', '@(FacebookAppKey)')">
+                            <a href='#' onclick="shareOnFacebook('MiraiConsult','Healthcare now more accessible and convenient at Mirai Consult&#8482;','0','@(AskmiraiUrl)', '@(FacebookAppKey)', '@(userType)')">
                                 <img title='Facebook' class='share_icons_width' src='../Content/image/fb.png' alt='Facebook'>
                             </a>
-                            <a class='share_link-margin ' target='_blank' href="https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= @(webaddress)" oncancel="ga(' send', 'event', 'Doctor', 'Invite On Twitter', 'MiraiConsult')">
+                            <a class='share_link-margin ' target='_blank' href="https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= @(webaddress)" oncancel="ga(' send', 'event', '@(userType)', 'Invite On Twitter', 'MiraiConsult')">
                                 <img title='Twitter' class='share_icons_width' src='../Content/image/twitter.png' alt='Twitter'>
                             </a>
-                            <a class='share_link-margin ' target='_blank' href="mailto:?Subject= I want to invite you to use Mirai Consult &amp;Body= @(webaddress)%0D%0A@(userName) @(ConfigurationManager.AppSettings["shareMessage"])" onclick="ga(' send', 'event', 'Doctor', 'Invite on Facebook', 'MiraiConsult')">
+                            <a class='share_link-margin ' target='_blank' href="mailto:?Subject= I want to invite you to use Mirai Consult &amp;Body= @(webaddress)%0D%0A@(userName) @(ConfigurationManager.AppSettings["shareMessage"])" onclick="ga(' send', 'event', '@(userType)', 'Invite on Facebook', 'MiraiConsult')">
                                 <img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'>
                             </a>
                         </div>
