changes in similarQuestion page

--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -124,18 +124,21 @@
         var successMessage = $(".success_message_color.msg_font");
         if (successMessage.length > 0) {
             var userType = '';
-            @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
-            {
-                @:userType = 'Doctor';   
+            @if (Session["UserType"] != null) { 
+                if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
+                {
+                    @:userType = 'Doctor';   
+                }
+                else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
+                {
+                    @:userType = 'Patient';   
+                }
+                else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
+                {
+                    @:userType = 'SuperAdmin';
+                }
             }
-            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
-            {
-                @:userType = 'Patient';   
-            }
-            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
-            {
-                @:userType = 'SuperAdmin';
-            }
+            
             //ga('send', 'event', 'category', 'action');
             ga('send', 'event', userType, 'Invite Friends');
         }
