--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -47,7 +47,6 @@
                     populateFeedData(indexoF)
                 }
             });
-
             function populateFeedData(index) {
                 var RecordSize = document.getElementById("HdnRecordSize").value;
                 var UserId = document.getElementById("HdnUserID").value;
@@ -84,7 +83,7 @@
                             "<div class='row-fluid custom-occupy'><div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div></div></div><div class='visible-phone feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div><div class='span6  middle-size-padding '><div class='ans_time_detail'>Dr. " + response[indexcnt].answerreplyedby + " </div><div class='title_text'><b>" + title + "</b></div></div>";
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 if (response[indexcnt].isdocconnectuser != false && docconnecturl != "")
-                                    template = template + "<div class='span3 pull-right hidden-phone'><a class='btn book_appt_button' onclick='(\"" + response[indexcnt].userid + "\", \"" + response[indexcnt].name + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a><br/><br/></div>";
+                                    template = template + "<div class='span3 pull-right hidden-phone'><a class='btn book_appt_button' onclick='bookaptclicked(\"" + response[indexcnt].docid + "\")' href='" + docconnecturl + response[indexcnt].docid + "&frmaskmirai=1' Class='btn book_appt_button' target='_blank' > Book Appointment </a><br/><br/></div>";
                             }
                             template = template + "</div>";
                             if (ansimg.length > 0) {
@@ -99,13 +98,12 @@
                             }
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 template = template + "<div class='row-fluid margintop_tosharebutn'>";
-
                                 var url = document.getElementById("AskmiraiUrl").value;;
                                 var FBappkey = document.getElementById("FacebookAppKey").value;
                                 template = template + "<div class='top_marging_sharelink' style='width:100%'><div style='width:67%' class='hidden-phone pull-left'><hr style='margin:12px;'/></div><a href='#' onclick='shareOnFacebook(\"" + escape(response[indexcnt].questiontext) + "\",\"" + escape(response[indexcnt].answertext) + "\", \"" + escape(response[indexcnt].questionid) + "\", \"" + url.toString() + "\",\"" + FBappkey.toString() + "\", \"Patient\")'><img title='Facebook' class='share_icons_width' src='../Content/image/fb.png' alt='Facebook'></a>" +
                                 //"<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= Q. " + escape(response[indexcnt].questiontext) + " \n Ans. " + escape(response[indexcnt].answertext) + "'><img title='Twitter' class='share_icons_width' src='../Resources/image/twitter.png' alt='Twitter'></a>" +
-                                "<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= " + url.toString() + "/answers/" + escape(response[indexcnt].questionid) + "' oncancel='ga(\"send\", \"event\", \"Patient\", \"Share On Twitter\", \"" + response[indexcnt].questiontext + "\")'><img title='Twitter' class='share_icons_width' src='../Content/image/twitter.png' alt='Twitter'></a>" +
-                                "<a class='share_link-margin ' target='' style='margin-right:10px;' href='mailto:?Subject=Mirai Consult has been shared an Answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "' oncancel='ga(\"send\", \"event\", \"Patient\", \"Share On Email\", \"" + response[indexcnt].questiontext + "\")'><img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'></a>";
+                                "<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= " + url.toString() + "/answers/" + escape(response[indexcnt].questionid) + "' onclick='ga(\"send\", \"event\", \"Patient\", \"Share On Twitter\", \"" + response[indexcnt].questiontext + "\")'><img title='Twitter' class='share_icons_width' src='../Content/image/twitter.png' alt='Twitter'></a>" +
+                                "<a class='share_link-margin ' target='' style='margin-right:10px;' href='mailto:?Subject=Mirai Consult has shared an answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "' onclick='ga(\"send\", \"event\", \"Patient\", \"Share On Email\", \"" + response[indexcnt].questiontext + "\")'><img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'></a>";
                                 if (response[indexcnt].ispatientthank) {
                                     template = template + "<a class='custom-green-text'><img src='../Content/image/thanks.png'/> Thanks its useful</a></div></div><br/>";
                                 }
@@ -114,7 +112,6 @@
                                     template = template + "<a class=\"custom-link\" onclick=\"return thankToDoctor(" + UserId + "," + response[indexcnt].answerid + ",this,'" + response[indexcnt].docLastname + "','" + response[indexcnt].docmobileno + "','" + response[indexcnt].doctEmail + "','" + escape(QuestionText) + "')\">Is it useful?</a><br/>";
                                 }
                             }
-
                             $("#feed").append(template);
                             Question++;
                         }
