Fixed Superadmin-->Assign Question:Search doctor by doctor name/speciality and city is not working properly.

--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -414,6 +414,10 @@
         var locationid = $('#locality-select').val();
         var specialityOrName = $('#txtSpecialityOrName').val();
         $("#searchResult").empty();
+        if(locationid == null)
+        {
+            locationid = '';
+        }
         show_doctorTable(cityid, locationid, specialityOrName);
         return false;
     };
